src/apps/services/onepassword-connect/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword-connect
  namespace: onepassword
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - "connect.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: onepassword-connect
      port: 8080
